Fixed slick overflow causing card box-shadow being cut off.

--- a/Frontend/src/components/Carousel/style.module.scss
+++ b/Frontend/src/components/Carousel/style.module.scss
@@ -2,6 +2,8 @@
 
 :global {
     .slick-list {
+        padding-bottom: var(--spacing); // Fix for overflow-y
+
         @include breakpoint-down(sm) {
             margin-top: var(--spacing-lg);
         }
@@ -93,6 +95,7 @@
     height: 100%;
     margin-left: -24px;
     margin-right: -24px;
+    height: calc(100% - var(--spacing)); // Fix for overflow-y
     padding: var(--spacing-xlg) 2rem;
     text-align: center;
     color: var(--c-white);
